# cvpn

./: .gitattributes  .gitignore  debug_proxy.py  debug_proxy_v2.py
custom-vpn/: CMakeLists.txt  README_CPP.md  SUMMARY.md  build.sh  config.json  requirements.txt  run.sh  simple_test  simple_test.cpp
custom-vpn/src/: config.cpp  logger.cpp  logger.h  main.cpp  proxy_handler.cpp  utils.cpp  utils.h  vpn_server.cpp
local-tunnel-server/: BUILD_README.md  BUILD_WINDOWS.md  CMakeLists.txt  CROSS_COMPILATION.md  Dockerfile.windows  NETWORKING_API_DIFFERENCES.md  PLUGIN_DEVELOPMENT.md  README.md  build.sh  build_all.sh  build_plugins_cross.sh  build_plugins_windows.sh  build_quick.sh  build_windows.bat  build_windows_cross.sh  build_windows_full.sh  config.json  config_proxy_only.json  config_server.json  config_tunnel.json  config_tunnel_only.json  config_windows.json  install_dependencies.sh  proxy_handler.py  run_tunnel_server.sh  run_vpn_server.sh  test_client.cpp  test_socks5_all.sh  test_vpn.sh
local-tunnel-server/build_linux/: local-tunnel-server  test-client
local-tunnel-server/build_windows/: windows_toolchain.cmake
local-tunnel-server/cmake/: mingw64-toolchain.cmake
local-tunnel-server/encryption_plugins/: caesar_encryption.cpp  encryption_export.h  xor_encryption.cpp
local-tunnel-server/src/: config.cpp  config.h  encryption_interface.h  encryption_manager.cpp  encryption_manager.h  logger.cpp  logger.h  main.cpp  platform_compat.h  proxy_handler.cpp  proxy_handler.h  socks5_handler.cpp  socks5_handler.h  tunnel_handler.cpp  tunnel_handler.h  tunnel_server.cpp  tunnel_server.h  vpn_server.cpp  vpn_server.h  windows_threading.h  windows_threading_fixed.h  windows_threading_new.h  windows_threading_old.h
